kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogear-front
  namespace: seashell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogear-front
  template:
    metadata:
      labels:
        app: gogear-front
    spec:
      containers:
        - name: gogear-front
          image: docker.io/bateau/gogear-frontend:v1.0.0@sha256:cd4dffa4aa4871d58d9c1591e7d322a1edab96c3f56b1fc3a36e957cbee2efdf
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: gogear-front
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
      dnsPolicy: "ClusterFirst"
      securityContext:
        fsGroup: 1000
