kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gogear-front
  name: gogear-front
  namespace: seashell
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: gogear-front
  sessionAffinity: None
  type: ClusterIP
