kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: gogear-front
  namespace: seashell
spec:
  ingressClassName: traefik
  rules:
    - host: gogear.sea-shell.no
      http:
        paths:
          - backend:
              service:
                name: gogear-front
                port:
                  number: 3000
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - gogear.sea-shell.no
      secretName: gogear-front-certificate
